単数時間表記をいい感じにするなど (#4427)
* じせい

* avoid words 接着

* for test

* zh

* fix

* Revert "for test"

This reverts commit 2366848a48e3aaecbcefe8fb4acef813271fb76d.

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -75,10 +75,26 @@ common:
     seconds_ago: "{}s ago"
     minutes_ago: "{}m ago"
     hours_ago: "{}h ago"
+    day_ago: "yesterday"
     days_ago: "{}d ago"
-    weeks_ago: "{}week(s) ago"
-    months_ago: "{}month(s) ago"
-    years_ago: "{}year(s) ago"
+    week_ago: "last week"
+    weeks_ago: "{} weeks ago"
+    month_ago: "last month"
+    months_ago: "{} months ago"
+    year_ago: "last year"
+    years_ago: "{} years ago"
+    seconds_after: "{}s after"
+    minutes_after: "{}m after"
+    hours_after: "{}h after"
+    day_after: "tomorrow"
+    days_after: "{}d after"
+    week_after: "next week"
+    weeks_after: "{} weeks after"
+    month_after: "next month"
+    months_after: "{} months after"
+    year_after: "next year"
+    years_after: "{} years after"
+
   month-and-day: "{month}/{day}"
   trash: "Trash"
   drive: "Drive"
