--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -54,10 +54,25 @@ common:
     seconds_ago: "{}秒前"
     minutes_ago: "{}分前"
     hours_ago: "{}小时前"
+    day_ago: "昨天"
     days_ago: "{}天前"
+    week_ago: "上周"
     weeks_ago: "{}周前"
+    month_ago: "上月"
     months_ago: "{}月前"
+    year_ago: "去年"
     years_ago: "{}年前"
+    seconds_after: "{}秒后"
+    minutes_after: "{}分后"
+    hours_after: "{}小时后"
+    day_after: "明天"
+    days_after: "{}天后"
+    week_after: "下周"
+    weeks_after: "{}周后"
+    month_after: "下月"
+    months_after: "{}月后"
+    year_after: "明年"
+    years_after: "{}年后"
   month-and-day: "{month}月 {day}日"
   trash: "垃圾箱"
   drive: "网盘"
