--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -80,9 +80,9 @@ common:
     week_ago: "last week"
     weeks_ago: "{} weeks ago"
     month_ago: "last month"
-    months_ago: "{} mons ago"
+    months_ago: "{} months ago"
     year_ago: "last year"
-    years_ago: "{} yrs ago"
+    years_ago: "{} years ago"
     seconds_after: "{}s after"
     minutes_after: "{}m after"
     hours_after: "{}h after"
@@ -91,9 +91,9 @@ common:
     week_after: "next week"
     weeks_after: "{} weeks after"
     month_after: "next month"
-    months_after: "{} mons after"
+    months_after: "{} months after"
     year_after: "next year"
-    years_after: "{} yrs after"
+    years_after: "{} years after"
 
   month-and-day: "{month}/{day}"
   trash: "Trash"
