招待コードの改善 (#4364)
* wip

* attach user

* wip

* wip

* a

* a

* a

* a

* a

* delete

* add

* じせい

* fix

* avoid words 接着

* こういうのセンスなのかもだわ

* a

* a

* en

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1405,6 +1405,7 @@ admin/views/index.vue:
   users: "Users"
   federation: "Federation"
   relays: "Relays"
+  invitations: "Invitations"
   announcements: "Announcements"
   hashtags: "Hashtags"
   abuse: "Abuse"
@@ -1412,6 +1413,23 @@ admin/views/index.vue:
   logs: "Logs"
   instanceblocks: "Instance blocks"
   back-to-misskey: "Back to Misskey"
+admin/views/invitations.vue:
+  addTitle: "New invitation"
+  addCount: "Usable count"
+  addExpireSec: "Expires after"
+  infinite: Infinite
+  day: Days
+  add: Issue
+  invitations: Invitations
+  code: Code
+  inviter: Inviter
+  createdAt: Created At
+  expiredAt: Expires At
+  restCount: Rest count
+  invitees: invitees
+  unknown: Unknown
+  delete: Delete
+  more: More
 admin/views/dashboard.vue:
   dashboard: "Dashboard"
   accounts: "Accounts"
