--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1545,6 +1545,7 @@ admin/views/index.vue:
   users: "ユーザー"
   federation: "連合"
   relays: "リレー"
+  invitations: "招待"
   announcements: "お知らせ"
   hashtags: "ハッシュタグ"
   abuse: "スパム報告"
@@ -1552,6 +1553,24 @@ admin/views/index.vue:
   logs: "ログ"
   instanceblocks: "インスタンスブロック"
   back-to-misskey: "Misskeyに戻る"
+
+admin/views/invitations.vue:
+  addTitle: 招待コードの発行
+  addCount: 使用可能回数
+  addExpireSec: 有効期限
+  infinite: 無期限
+  day: 日
+  add: 発行
+  invitations: 発行済みの招待
+  code: コード
+  inviter: 招待者
+  createdAt: 作成
+  expiredAt: 期限
+  restCount: 残り回数
+  invitees: invitees
+  unknown: 不明
+  delete: 削除
+  more: もっと
 
 admin/views/dashboard.vue:
   dashboard: "ダッシュボード"
