相対時間表示を調整 Resolve #4438

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -75,24 +75,24 @@ common:
     seconds_ago: "{}s ago"
     minutes_ago: "{}m ago"
     hours_ago: "{}h ago"
-    day_ago: "yesterday"
+    day_ago: "1d ago"
     days_ago: "{}d ago"
-    week_ago: "last week"
+    week_ago: "1 week ago"
     weeks_ago: "{} weeks ago"
-    month_ago: "last month"
+    month_ago: "1 month ago"
     months_ago: "{} months ago"
-    year_ago: "last year"
+    year_ago: "1 year ago"
     years_ago: "{} years ago"
     seconds_after: "{}s after"
     minutes_after: "{}m after"
     hours_after: "{}h after"
-    day_after: "tomorrow"
+    day_after: "1d after"
     days_after: "{}d after"
-    week_after: "next week"
+    week_after: "1 week after"
     weeks_after: "{} weeks after"
-    month_after: "next month"
+    month_after: "1 month after"
     months_after: "{} months after"
-    year_after: "next year"
+    year_after: "1 year after"
     years_after: "{} years after"
 
   month-and-day: "{month}/{day}"
