--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -76,24 +76,24 @@ common:
     seconds_ago: "{}秒前"
     minutes_ago: "{}分前"
     hours_ago: "{}時間前"
-    day_ago: "昨日"
+    day_ago: "1日前"
     days_ago: "{}日前"
-    week_ago: "先週"
+    week_ago: "1週間前"
     weeks_ago: "{}週間前"
-    month_ago: "先月"
+    month_ago: "1ヶ月前"
     months_ago: "{}ヶ月前"
-    year_ago: "去年"
+    year_ago: "1年前"
     years_ago: "{}年前"
     seconds_after: "{}秒後"
     minutes_after: "{}分後"
     hours_after: "{}時間後"
-    day_after: "明日"
+    day_after: "1日後"
     days_after: "{}日後"
-    week_after: "来週"
+    week_after: "1週間後"
     weeks_after: "{}週間後"
-    month_after: "来月"
+    month_after: "1ヶ月後"
     months_after: "{}ヶ月後"
-    year_after: "来年"
+    year_after: "1年後"
     years_after: "{}年後"
 
   month-and-day: "{month}月 {day}日"
