--- a/locales/zh-TW.yml
+++ b/locales/zh-TW.yml
@@ -22,24 +22,24 @@ common:
   time:
     future: "未來"
     just_now: "剛剛"
-    day_ago: "昨天"
+    day_ago: "1天前"
     days_ago: "{}天前"
-    week_ago: "上周"
+    week_ago: "1周前"
     weeks_ago: "{}周前"
-    month_ago: "上月"
+    month_ago: "1月前"
     months_ago: "{}月前"
-    year_ago: "去年"
+    year_ago: "1年前"
     years_ago: "{}年前"
     seconds_after: "{}秒後"
     minutes_after: "{}分後"
     hours_after: "{}小时後"
-    day_after: "明天"
+    day_after: "1天後"
     days_after: "{}天後"
-    week_after: "下周"
+    week_after: "1周後"
     weeks_after: "{}周後"
-    month_after: "下月"
+    month_after: "1月後"
     months_after: "{}月後"
-    year_after: "明年"
+    year_after: "1年後"
     years_after: "{}年後"
 
   drive: "雲端硬碟"
