--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1531,7 +1531,7 @@ admin/views/index.vue:
   abuse: "スパム報告"
   queue: "ジョブキュー"
   logs: "ログ"
-  instanceblocks: "インスタンスブロック"
+  instancemoderation: "インスタンスモデレーション"
   back-to-misskey: "Misskeyに戻る"
 
 admin/views/invitations.vue:
@@ -1857,8 +1857,9 @@ admin/views/federation.vue:
   latest-request-received-at: "直近のリクエスト受信"
   remove-all-following: "フォローを全解除"
   remove-all-following-info: "{host}からのフォローをすべて解除します。そのインスタンスがもう存在しなくなった場合などに実行してください。"
-  block: "ブロック"
+  ignore: "インスタンスを無視"
   marked-as-closed: "閉鎖されているとマーク"
+  flag-info: "無視はそのインスタンスとの送受信と取得を停止します。閉鎖は送信のみを停止します。フラグは疎通状況によって自動更新されます。"
   lookup: "照会"
   instances: "連合"
   instance-not-registered: "そのインスタンスは登録されていません"
@@ -1883,7 +1884,7 @@ admin/views/federation.vue:
   state: "状態"
   states:
     all: "すべて"
-    blocked: "ブロック"
+    ignored: "無視済み"
     not-responding: "応答なし"
     marked-as-closed: "閉鎖とマーク済み"
   result-is-truncated: "上位{n}件を表示しています。"
@@ -1905,8 +1906,8 @@ admin/views/federation.vue:
     day: "1日ごと"
 
 admin/views/instanceblocks.vue:
-  instanceblocks: "インスタンスブロック"
-  blockedInstances-info: "1行に1ホスト記述します。/正規表現/ が使えます。"
+  ignoredInstances: "インスタンスの無視"
+  ignoredInstances-info: "1行に1ホスト記述します。/正規表現/ が使えます。"
 
 admin/views/relay.vue:
   add-relay: "リレーの追加"
