セルフインスタンスサイレンス (#4466)
* ss settings

* impl

* UI

* exposeHome UI

* exposeHome impl

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1743,8 +1743,13 @@ admin/views/federation.vue:
     day: "Daily"
 
 admin/views/instanceblocks.vue:
+  instancemoderation: "Instance moderation"
   ignoredInstances: "Ignored instances"
-  ignoredInstances-info: "One host per line. You can use /RegExp/."
+  ignoredInstances-info: "Instances that don't send/receive and fetch. One host per line. You can use /RegExp/."
+  selfSilencedInstances: "Self-silenced instances"
+  selfSilencedInstances-info: "Instances to deliver with maximum visibility home. One host per line. You can use /RegExp/."
+  exposeHome: "If fetched from remote, max visibility to home."
+  exposeHome-info: "If posts are retrieved from instances with no followers, etc., set the maximum visibility to Home."
 
 admin/views/relay.vue:
   add-relay: "Add relay"
