--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1324,6 +1324,7 @@ desktop/views/components/timeline.vue:
   hybrid: "Social"
   hybrid-desc: "Home+Local"
   global: "Global"
+  another: "Another"
   reacted: "Reacted"
   mentions: "Mentions"
   messages: "Direct posts"
@@ -1965,6 +1966,7 @@ mobile/views/pages/home.vue:
   locao: "Locao"
   hybrid: "Social"
   global: "Global"
+  another: "Another"
   reacted: "Reacted"
   mentions: "Mentions"
   messages: "Direct posts"
@@ -2027,6 +2029,7 @@ deck:
   hybrid: "Social"
   hashtag: "Hashtag"
   global: "Global"
+  another: "Another"
   reacted: "Reacted"
   mentions: "Mentions"
   direct: "Direct posts"
