--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1446,6 +1446,7 @@ desktop/views/components/timeline.vue:
   hybrid: "ソーシャル"
   hybrid-desc: "ホーム+ローカル"
   global: "グローバル"
+  another: "他人"
   reacted: "リアクション"
   mentions: "あなた宛て"
   messages: "ダイレクト投稿"
@@ -2167,6 +2168,7 @@ mobile/views/pages/home.vue:
   locao: "ローカオ"
   hybrid: "ソーシャル"
   global: "グローバル"
+  another: "他人"
   reacted: "リアクション"
   mentions: "あなた宛て"
   messages: "ダイレクト投稿"
@@ -2243,6 +2245,7 @@ deck:
   hybrid: "ソーシャル"
   hashtag: "ハッシュタグ"
   global: "グローバル"
+  another: "他人"
   reacted: "リアクション"
   mentions: "あなた宛て"
   direct: "ダイレクト投稿"
