タイムマシン (#4509)
* Desktop user home

* deck

* fix

* deck other

* a

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -141,6 +141,7 @@ common:
   flush: "Clear cache"
   signinOrUsePostUrl: "To do so, either signin or put the URL into your instance's search box and do it."
   renoted: "Renoted"
+  timemachine: "Timemachine"
 
   permissions:
     "read:account": "View your account information"
