検索のオプトイン/オプトアウト手段を設ける (#4566)
* public vis. fedibird public only

* none

* local

* exporse AP

--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -986,6 +986,7 @@ common/views/components/profile-editor.vue:
   auto-accept-followed: "フォローしているユーザーからのフォローを自動承認する"
   avoid-search-index: "検索エンジンによるインデックスを避ける"
   isExplorable: "みつけるに表示する"
+  searchableBy: "投稿検索を許可する"
   hideFollows-none: "フォロー/フォロー一覧を隠さない"
   hideFollows-follower: "フォロー/フォロー一覧はフォロワーにのみ公開する"
   hideFollows-always: "フォロー/フォロー一覧を常に隠す"
