未ログオンでタイムラインやゲームメニューやハッシュタグ投稿フォームが表示されてしまうのを修正 Resolve #4573

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -104,6 +104,7 @@ common:
   deck: "Deck"
   undeck: "Leave Deck"
   timeline: "Timeline"
+  top: "Top"
   explore: "Explore"
   new-post: "New post"
   featured: "Featured notes"
