カスタム絵文字を拡大しないオプション

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -308,6 +308,10 @@ common:
     visibilityColoring-none: "None"
     visibilityColoring-bg: Background"
     visibilityColoring-left: "Left"
+    customEmojiStyle: "CustomEmoji zooming"
+    customEmojiStyle-large: "Enable"
+    customEmojiStyle-normal: Disable"
+    customEmojiStyle-stamp: "Only stamp"
     this-setting-is-this-device-only: "Only for this device"
     deck-column-align: "Deck column alignment"
     deck-column-align-center: "Center"
