--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -322,6 +322,10 @@ common:
     visibilityColoring-none: "しない"
     visibilityColoring-bg: "背景"
     visibilityColoring-left: "左"
+    customEmojiStyle: "カスタム絵文字の拡大表示"
+    customEmojiStyle-large: "する"
+    customEmojiStyle-normal: "しない"
+    customEmojiStyle-stamp: "1つ時のみ"
     this-setting-is-this-device-only: "このデバイスのみ"
     deck-column-align: "デッキのカラム群の配置"
     deck-column-align-center: "中央に寄せる"
